<resources>
    <string name="app_name">Control Loan</string>
    <string name="mensagem_login">Faça seu Login</string>

    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">Configurações</string>
    <string name="nav_close">fechar</string>
    <string name="nav_open">Abrir</string>
    <string name="dashboard">Dashboard</string>
    <string name="item">Item</string>
    <string name="canlendario">Calendario</string>
    <string name="contatos">Contatos</string>
    <string name="nomeUsuario">Usuário</string>
    <string name="senhaUsuario">Senha</string>
    <string name="solicitarEmrpestimo">Solicitar Emrpéstimo</string>
    <string name="usuarios">Usuários</string>
    <string name="emprestimos">Empréstimos</string>
    <string name="equipamentos">Equipamentos</string>
    <string name="sair">Sair</string>
    <string name="lembrar_login">Lembrar Login</string>
    <string name="login">Login</string>
    <string name="numero_do_equipamento">Número do Equipamento</string>
    <string name="remover">Remover</string>
    <string name="nome_usuario">Nome Usuário</string>
    <string name="painel">Painel</string>
    <string name="API_KEY">AIzaSyDgyAML2ijGLEAfN45n3PQRaN7TYDv6g2E</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="localizacao">Localização</string>
    <string name="equipamento">Equipamento</string>
</resources>
