<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_developer_board_black_24dp"
            android:title="@string/dashboard"
            android:checked="true"/>
        <item
            android:id="@+id/nav_emprestimos"
            android:title="@string/emprestimos"
            android:icon="@drawable/ic_emprestimos_equip_black" />
        <item
            android:id="@+id/nav_solicitarEmrpestimo"
            android:icon="@drawable/ic_mobile_multiple_devices_black"
            android:title="@string/solicitarEmrpestimo"/>
        <item
            android:id="@+id/nav_equipamentos"
            android:icon="@drawable/ic_mobile_multiple_devices_black"
            android:title="@string/equipamentos"/>
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/usuarios"/>
        <item
            android:id="@+id/nav_sair"
            android:title="@string/sair"
            android:icon="@drawable/ic_exit_to_app_black_48dp" />
    </group>
</menu>