<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <EditText
        android:id="@+id/campo_usuario"
        android:hint="@string/nomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/campo_senha"
        android:hint="@string/senhaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="numberPassword"/>

    <CheckBox
        android:id="@+id/checkLembrar"
        android:text="@string/lembrar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/botao_login"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <ImageView
        android:id="@+id/campo_imagen"
        android:layout_width="365dp"
        android:layout_height="219dp"
        android:layout_marginTop="20dp" />

</LinearLayout>